# Opustelic-ppt-engine

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  README_EN.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
engine/: __init__.py  brief_parse.py  chart_shapes.py  chart_template_map.py  financial_models.py  icon_sync.py  image_pipeline.py  narration.py  pipeline.py  prompt_builder.py  providers.py  render_preview.py  research.py  speaker_notes.py  svg_layout.py
engine/ppt_master/: README.md  SKILL.md
engine/svg2pptx/: __init__.py
examples/01_fmcg_growth_strategy/: 元气浆_2027全国化增长战略.pptx  (+1 more)
exemplars/: 分析框架库.json  数据色板.json  表达手法卡.json  页型卡库.json
reinforce/: __init__.py  asset_ledger.py  data_palette.py  deck_memory.py  deck_state.py  deck_workspace.py  issue_tree.py  planning_team.py  review.py  spec_lock.py  storyline_state.py  strategy_prompts.py
research_lib/: 开源生态调研_两工作流资源地图.md
tests/: test_asset_ledger.py  test_brief_parse.py  test_chart_shapes.py  test_d18_visual_pipeline.py  test_data_palette.py  test_deck_memory.py  test_deck_rules.py  test_deck_state.py  test_deck_workspace.py  test_evolution.py  test_financial_models.py  test_font_embed.py  test_image_cn_query.py  test_image_pipeline.py  test_issue_tree.py  test_knowledge_ingest.py  test_narration.py  test_pipeline.py  test_planning_team.py  test_prompt_builder.py  test_providers.py  test_render_preview.py  test_retrieval.py  test_review.py  test_spec_lock.py  test_storyline.py  test_strategy_prompts.py  test_svg2pptx.py  test_svg_compat.py  test_svg_layout.py  test_versioning.py  test_visual_review.py
(+81 files in other folders)
